<resources>
    <string name="c1p1">There are three basic markets that are available for trader to trade online, they are\n\n<ol>
        <li>Stock market.\n</li>
<li>Commodity market.\n</li>
<li>Currency market.\n</li></ol>
These markets are further divided in different sections, like:\n\n
Spot market and derivatives.\n\n
<b>Trillions of dollars are traded world over in these markets. They are all online, and one can trade from any part of the world.\n</b>
 Let’s understand these interesting markets in details.\n
</string>
    <string name="c1p2">Futures market is a contract where in the stock, commodity or currency is traded\n
        in standardized future contract.\n\n
These contracts have fixed lot size, date of expiry, tick size\n
and unit of price quotation. The buyer and seller agree to buy or sell at certain price and deliver or settle at the end of the contract.\n
        <b>Futures is derivative market, it is called derivative, since the price is derived from its spot market.</b>
</string>
    <string name="c1p2_1">
        Futures market is traded on margin, since the delivery or settlement takes place at \nthe expiry, a partial margin is collected by the exchange and broker.\n
Suppose: ABC Ltd futures is traded  @ 100/ and the lot size of futures contract is 250 Shares. Than value of the contract is :\n
100 X 250 = 25000/ but buyer may have to just pay say 10% of the value, i.e:\n
25000 X 10% = 2500/\n
        <b> one can buy or sell shares of 25000/- buy investing only 2500/.</b>
        Futures market is traded on margin, since the delivery or settlement takes place at \nthe expiry, a partial margin is collected by the exchange and broker.\n Margins may vary from Instrument to instrument, like for equity or index it can be from 10% to 40%, currency may have 3% to 5%. \nLot depends on volatility of the instrument.
In instruments like Commodities futures, which have delivery at the expiry, the margins can rise as the expiry approaches. \nMargins may also rise, in case of rise in volatility of the instrument.
<b>\nBrokers opens limit for client to trade in futures depending upon the margin deposited With the broker. This margin is called the initial margin/ span margin.
\n</b>
        Since the trade will be settled in future, the daily market movement of the instrument is balanced by MTM ( MARK TO MARKET) margin.
Lets understand how MTM works.\n Suppose you have bought on 1st January one lot of shares of ABC LTD company in futures @ Rs. 110/- the lot size is of 250 shares/ lot. \nOn 2nd January the price has moved up to Rs. 115/- so ( 115- 110) =Rs. 5/-. So, the exchange will pay you a MTM of Rs. 5 x 250 ( shares) = Rs. 1250/- This is called the pay out.\n Now suppose on 3rd January the price comes down to Rs. 107/-. So, there is (115- 107) = Rs. 8/- loss and you will have to pay to the exchange Rs. 8 x 250 ( shares) = Rs. 2000/- this is called pay in.
<b>Till the trade is not squared off or contract settles,\n this MTM is calculated and paid or received on daily basis.
</b>
    </string>
    <string name="c1p1p3">
        <ol>
            <li>
                Option is an instrument that \ngives the right to buy or sell to the buyer,\n but not an obligation to buy or \nsell at specified price and or within specified date.
            \n</li>
            <li>
                An ‘Option’ is part of derivative market,\n which allows the buyer to enter the trade by paying \na premium against which the seller of option \nor the option writer guarantees \nthe right of the buyer to buy or sell the contract\n at specified price.
           \n </li>
            <li>
                Call option is bought by trader when he/ she is expecting the market to move up. \nCall option seller or call option writer is one who is not expecting market to move up.\n Call option seller will charge a premium \nto call option buyer for selling the call.
            \n</li>
            <li>
                Call option gives right to the buyer to buy the instrument at given price before the specified date or on settlement date,but not an obligation.\n The maximum investment that a buyer needs to make is the premium paid to the seller.\n  Also, the maximum loss that a buyer can make is the premium paid.\n But the chances of profit can be limitless.
            \n</li>
            <li>

            </li>
        </ol>
    </string>
    <string name="PUTOPTION"><ol>
        <li>Put option is bought by trader when he/ she is expecting the market to move down. Put option seller or put option writer is one who is not expecting market to move down. Put option seller will charge a premium to put option buyer for selling the put.\n</li>
        <li>
Put option gives right to the buyer to sell the instrument at given price before the specified date or on settlement date, but not an obligation. The maximum investment that a buyer needs to make is the premium paid to the seller.  Also, the maximum loss that a buyer can make is the premium paid. But the chances of profit can be limitless.
        \n</li>
        <li>Let’s assume that ABC LTD option lot is of 250 shares, current market price (CMP) of one share is  Rs.100/-. Suppose you decide to buy put option of Strike price Rs. 100/-  it is called At the money option (ATM), since it is at same price as current market price. As buyer you only have to pay premium, i.e. assume Rs. 5/-
\n</li>
        <li>But the seller may have to pay higher margin, may be equal to  the futures margin.
\n</li><li>Also, the seller of the option will have to pay for MTM in case the market moves against the strike price he has sold the option at.
   \n </li>
    </ol>
    </string>
    <string name="tradinggyaan">
        <ol>
            <li>
                Always start trading in options only after you have been trading profitably.
           \n </li>
            <li>
                Always buy options in your learning stage.
            \n</li>
            <li>
                Never sell or write options, unless you have become an expert trader.
           \n </li>
        </ol>
    </string>
    <string name="equityt">
        <ol>
            <li>
                Equity market or stock market, is commonly traded market in India. When one buys a share of any public limited company, he / she becomes a deemed owner of that company to the extent of the value of the shares mentioned on shares certificate.
            \n</li>
            <li>
                Isn’t it exciting to be small partial owner of any public limited company? So, how does one become so and how does one benefit from it?
            </li>
            <li>
                The stock market is constantly volatile and if the company you, does well, it’s share value goes up, and you make profit. have invested in
            \n</li>
            <li>
                Also, profitable companies issue Dividend or Bonus shares which again can benefit the investor. Don’t forget if the company does not make profit, shares prices can come down, and you may end up losing.
            \n</li>
            <li>
So let us understand Equity market, before we start trading?\n
            </li>
        </ol>
    </string>
    <string name="ch4">
        <ol>
            <li>
                Start trading with equity in very small quantity.\n</li>
            <li>
                Once traded equity profitably move to options buying in small lots and OTM.\n</li>
            <li>
                Next step is to move to trading in index.\n</li>
            <li>
                Followed by futures.\n</li>
        </ol>
    </string>
    <string name="l1p1">

        <ol>
            <b>Jesse Livermore</b>\n
            <li>Born in 1877, Jesse Livermore is one of the greatest traders that few people know about. While a book on his life written by Edwin Lefevre, Reminiscences of a Stock Operator (1923), is highly regarded as a must-read for all traders</li>\n\n
            <b>BREAK OUT TRADING</b>\n
            <li><b>Breakout trading</b> is used by active investors to take a position within a trend\'s early stages. Generally speaking, this <b>strategy</b> can be the starting point for major price moves, expansions in volatility and, when managed properly, can offer limited downside risk.</li>\n\n
            <b>SCALPING</b>\n
            <li>Scalping is a trading style specializing in taking profits on small price changes, generally soon after a trade has been entered and has become profitable. It requires a trader to have a strict exit strategy, because one large loss could eliminate the many small gains that the trader has worked to obtain.</li>\n\n
            <b>MOMENTUM</b>\n
            <li>Momentum trading is more than identifying which way a stock is trending, it is a trading strategy that focuses on stocks or other trading instruments that are showing a strong move in a particular direction, usually on high volume, within a specified time period.\n</li>\n\n
            <b>SWING TRADING</b>\n
            <li>Swing Trading is a short term trading method that can be used when trading stocks and options. Whereas Day Trading positions last less than one day, Swing Trading positions typically last two to six days, but may last as long as two weeks.</li>\n\n
            <b>TECHNICAL TRADING</b>\n
            <li>Using Technical Indicators To Develop Trading Strategies. Indicators, such as moving averages and Bollinger Bands, are mathematically based technical analysis tools that traders and investors use to analyse the past and predict future price trends and patterns.</li>\n\n
            <b>FUNDAMENTAL TRADING.</b>\n
            <li>To some extent, the same is done in the retail forex market, where forex fundamental traders evaluate currencies, and their countries, like companies and use economic announcements to gain an idea of the currency\'s true value .....Fundamental traders look at all of this information to evaluate a country\'s currency. Similarly company balance sheet and news are evaluated.</li>\n\n
            <b>HFT</b>\n
            <li>Secrecy, Strategy and Speed are the terms that best define high frequency trading (HFT) firms and indeed, the financial industry at large as it exists today. ... The firms in the HFT business operate through multiple strategies to trade and make money in pips or part of it. High frequency traders hunt for market inefficiency for fraction of a second and they encash it.</li>\n\n
            <b>ARBITRAGE</b>\n
            <li>Arbitrage is the simultaneous purchase and sale of an asset to profit from a difference in the price. It is a trade that profits by exploiting the price differences of identical or similar financial instruments on different markets or in different forms. Arbitrage exists as a result of market inefficiencies. There are multiple strategies to Arbitrage an instrument.</li>\n\n
            <b>PAIR TRADING</b>\n
            <li>The pairs trade or pair trading is a market neutral trading strategy enabling traders to profit from virtually any market conditions: uptrend, downtrend, or sideways movement. This strategy is categorized as a statistical arbitrage and convergence trading strategy.</li>\n\n



        </ol>
    </string>
    <string name="types">
        <ol>
            <li>BREAK OUT TRADING\n</li>
            <li>SCALPING\n</li>
            <li>MOMENTUM\n</li>
            <li>TECHNICAL TRADING\n</li>
            <li>FUNDAMENTAL TRADING\n</li>
            <li>SWING TRADING.\n</li>
            <li>HFT\n</li>
            <li>ARBITRAGE\n</li>
            <li>PAIR TRADING\n</li>
        </ol>
    </string>
    <string name="tradinggyan">
        <ol>
            <li>There is no one strategy that is good or bad.\n</li>\n
            <li>Depending on traders liking he / she can adopt a strategy.\n</li>\n
            <li>Strategy can also be changed with the time and circumstances.\n</li>\n
        </ol>
    </string>
</resources>