<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".c1p1">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="20sp"
            android:text="PART 1 "
            android:textColor="#0092FF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_medium"
            android:paddingStart="20sp"
            android:paddingLeft="10sp"
            android:paddingTop="15sp"
            android:text="@string/c1p1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Basic market details"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="wrap_content"
            android:layout_height="373dp"
            android:adjustViewBounds="true"
            android:cropToPadding="false"
            android:paddingTop="10sp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/picture3" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="BASIC MARKET DETAILS"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="match_parent"
            android:layout_height="413dp"
            android:adjustViewBounds="true"
            android:cropToPadding="false"
            android:paddingTop="10sp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/graph1" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="10sp"
                android:text="Part 2"
                android:textColor="#008FFF"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5sp"
                android:paddingTop="10sp"
                android:paddingRight="5sp"
                android:text="@string/c1p2"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="485dp"
                android:layout_height="293dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:screenReaderFocusable="false"
                app:srcCompat="@drawable/picture4" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10sp"
                android:paddingBottom="10sp"
                android:text="PAYMENTS IN FUTURE MARKET"
                android:textColor="#00D6C2"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10sp"
                android:paddingRight="10sp"
                android:text="@string/c1p2_1"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="10sp"
                android:paddingBottom="10sp"
                android:text="Part 3"
                android:textAllCaps="true"
                android:textColor="#FD3D00"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="OPTIONS MARKET"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10sp"
                android:text="@string/c1p1p3"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10sp"
                android:paddingBottom="10sp"
                android:text="PUT OPTION DETAILS"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10sp"
                android:paddingTop="10sp"
                android:paddingRight="10sp"
                android:paddingBottom="10sp"
                android:text="@string/PUTOPTION"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="TRADING GYAAN!!!"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10sp"
                android:paddingBottom="10sp"
                app:srcCompat="@drawable/picture5" />

            <TextView
                android:id="@+id/textView30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tradinggyaan"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView31"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="PART 4"
                android:textColor="#FF9500"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10sp"
                android:paddingTop="10sp"
                android:paddingRight="10sp"
                android:text="@string/equityt"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="HOW DO WE EARN?"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_marginStart="-10dp"
                android:layout_marginLeft="-50dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/equity" />

            <TextView
                android:id="@+id/textView35"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="TRADING GYAAN!!!"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10sp"
                android:paddingBottom="10sp"
                app:srcCompat="@drawable/picture5" />

            <TextView
                android:id="@+id/textView37"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/ch4"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>