<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".l1p1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:id="@+id/textView18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10sp"
        android:text="Part 1"
        android:textColor="#008FFF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="DIFFERENT TYPES OF TRADING"
        android:textColor="#0088F3"
        android:textSize="18sp"
        android:textStyle="bold|italic" />
        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20sp"
            android:paddingTop="10sp"
            android:paddingRight="5sp"
            android:text="@string/l1p1"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:paddingTop="10dp"
            android:layout_marginLeft="20dp"
            android:paddingBottom="10dp"
            android:text="TYPES OF TRADING"
            android:textColor="#0088F3"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20sp"
            android:paddingTop="10sp"
            android:paddingRight="5sp"
            android:text="@string/types"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:paddingTop="10dp"
            android:layout_marginLeft="20dp"
            android:paddingBottom="10dp"
            android:text="TRADING STRATEGIES"
            android:textColor="#0088F3"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20sp"
            android:paddingTop="10sp"
            android:paddingRight="5sp"
            android:text="@string/types"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="10dp"
            android:layout_marginLeft="20dp"
            android:paddingBottom="10dp"
            android:textStyle="bold|italic"
            android:text="TRADING GURU GNYAN!"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10sp"
            android:paddingBottom="10sp"
            app:srcCompat="@drawable/picture5" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20sp"
            android:paddingTop="10sp"
            android:paddingRight="5sp"
            android:text="@string/tradinggyan"
            android:textSize="20sp" />



    </LinearLayout>



</ScrollView>